# f1-lakehouse

./: .env  .env.example  Makefile  README.md  docker-compose.release.yml  docker-compose.storage.yml  docker-compose.yml  docker-compose.yml.bak
.github/workflows/: build-and-publish.yml
ai/rag_api/: app.py  main.py  requirements.txt
dashboard/: app.py  requirements.txt
docker/ai/: Dockerfile
docker/dashboard/: Dockerfile
docker/dbt/: Dockerfile
docker/ingestion/: Dockerfile
ingestion/: pyproject.toml
ingestion/src/ingestion/: fastf1_ingest.py  utils.py
notebooks/: f1_data_exploration.ipynb
scripts/: check_gold.sh  init_external.sh
transform/: dbt_project.yml
transform/macros/: compat.sql  safe.sql
transform/models/gold/: driver_session_summary.sql  schema.yml  team_event_summary.sql
transform/models/silver/: laps.sql  results.sql  schema.yml  weather.sql
transform/profiles/: .user.yml  profiles.yml
